organize modules and classes

--- a/src/usecase/build.gradle
+++ b/src/usecase/build.gradle
@@ -7,4 +7,5 @@ dependencies {
      * Import modules
      */
     implementation project(':report-generator-common')
+    implementation project(':report-generator-domain')
 }
